examples/test/testpolicy7989.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7989
  namespace: namespace457
spec:
  podSelector:
    matchLabels:
      key49: value30
      key14: value11
      key3: value44
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key45: value24
      podSelector:
        matchLabels:
          key13: value23
          key23: value36
